--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</h1>
 			<h3 class="">
 				October 10, 2015
-			</h3><br /><br /><br /><a onclick="scrollToTarget('#bloc-6')" class="btn-wire btn btn-xl bounceInUp animated">Register</a><a id="scroll-hero" class="btn-dwn" onclick="scrollToTarget('#bloc-2')"><span class="fa fa-chevron-down"></span></a>
+			</h3><br /><br /><br /><a onclick="scrollToTarget('#bloc-6')" class="btn-wire btn btn-xl bounceInUp animated">Pre-Registration is OPEN!</a><a id="scroll-hero" class="btn-dwn" onclick="scrollToTarget('#bloc-2')"><span class="fa fa-chevron-down"></span></a>
 		</div>
 	</div>
 </div>
@@ -187,6 +187,46 @@
 	</div>
 </div>
 <!-- moreinfo END -->
+<!-- FAQ -->
+<div class="bloc l-bloc " id="bloc-f5">
+<body>
+	<div class="container bloc-lg">
+
+	<h1>F.A.Q.</h1>	
+	<section>
+				<header>
+			<h1>What if I'm not from UMassD or any uMass?</h1>
+			We invite all schools (university/college/high schools) to our local hack day. It is a great way to build a working knowledge of coding, and improve on your knowledge by applying it to an awesome project! Local academic institutions in Southern Massachusetts, Rhode Island, and the Massachusetts Region are not only invited, but encouraged, to attend!
+		</header>
+		<header>
+			<h1>I'm a high school student, I can attend right?</h1>
+			Absolutely! Just make sure you have a parent/guardian at the event while you are coding away. They are free to take advantage of our workshops and possibly write a few lines of code during the day!
+		<header>
+			<h1>What can I win?</h1>
+			This event is <b>not about winning.</b> It's about learning and making friends that will last for a lifetime. If you're thinking, "that's adorable..but really what can I win", then we've got you covered too. A panel of judges from the Massachusetts and Rhode Island region will select the best projects from the day based on the following criteria: creativity, technical difficulty, polish (have your ux design kits and nice fonts ready!), and usefulness. 	Top prizes are TBA. 
+		</header>
+		<header>
+			<h1>How much will LocalHackDay at UMassD Cost?</h1>
+			$0.00. Nothing. Nada. Zip. Zilch. Zero. We'll provide the lunch, breakfast, snacks, free swag, and drinks for twelve hours. You just show up, form a team with friends or strangers, and work on a project that you came up with!	
+		</header>
+		<header>
+			<h1>I'm not a student. What now?</h1>
+			Well, you're not allowed to participate (sadly). However, we are actively looking for mentors. Mentors are <b>invite-only</b> from the LocalHackDay UMassD Team. We are not allowing mentors to "show-up", you need pre-approval. Get in contact over at mentor@corsaircoding.pw 
+		</header>
+		<header>
+			<h1>How do you run this event?</h1>
+			This event is planed by UMass Dartmouth students with advice from Major League Hacking (MLH.io). 100% of the funding comes from sponsor organizations. 
+		</header>
+			<h1>What should I bring to this event?</h1>
+			Laptop, any mobile device (or hardware platform) that you may decide to code on, ethernet cable, power strip, charger (DONT FORGET YOUR LAPTOP CHARGER, WE HAVE NO SPARES!). If you have an item you are unsure of, email questions@corsaircodeing.pw Do <b>not</b> bring alcohol, drugs, animals, or weapons. You will be promptly removed from the event and reported to UMass Dartmouth's Department of Public Safety.
+		
+		</header>
+	</section>
+	</div>
+		</body>
+		
+
+</div>
 
 <!-- register -->
 <div class="bloc  bg-light-grey-background-pattern-i1 d-bloc" id="bloc-6">
@@ -197,10 +237,13 @@
 					Register for Local Hack Day at UMass Dartmouth
 				</h1>
 				<h4 class="mg-md text-center  ">
-					Our registration officially opens on June 27, 2015. We have limited capacity for this event. Please register ASAP to reserve a workspace.
+					Pre-Registration is now <b>live</b>. Students who pre-register will be able to access official registration 24hrs before others. Pre-Registration closes June 25, 2015. Our registration officially opens on June 27, 2015. We have limited capacity for this event. Pre-Register and/or Register to secure a workspace at a table!
 				</h4>
 				<div class="text-center">
-					<a href="index.html" class="btn  btn-xl btn-c-4">Get your ticket!</a>
+					<center>
+					<a class="typeform-share button" href="https://umassdhacks.typeform.com/to/bkXId8" data-mode="2" target="_blank">Pre-Register</a>
+<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+					</center>
 				</div>
 			</div>
 		</div>
@@ -217,7 +260,7 @@
 					Local Sponsors
 				</h2>
 				<p class="text-center sub-heading ">
-					(RI/MA company (<500 employees) interested in sponsoring? Email us: sponsors@computersecurity.club)
+					(RI/MA company (<500 employees) interested in sponsoring? Email us: sponsor@corsaircoding.pw)
 				</p>
 			</div>
 		</div>
@@ -262,7 +305,7 @@
 					Our Corporate Sponsors 
 				</h2>
 				<p class="text-center sub-heading ">
-					(are you a large company with interest in sponsoring? Email us: sponsors@computersecurity.club)
+					(are you a large company with interest in sponsoring? Email us: sponsor@corsaircoding.pw)
 				</p>
 			</div>
 		</div>
