--- a/schedule.html
+++ b/schedule.html
@@ -108,6 +108,7 @@
 				<h1 class="mg-md">
 					Workshops: Improve Your Old Skills &amp; Learn New Skills
 				</h1>
+				<h2>Interested in hosting a workshop? Get in touch with our workshop organizers: workshops@corsaircoding.pw
 				<div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -127,11 +128,11 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="box">
                 <div class="box-icon">
-                    <span class="fa fa-4x fa-css3"></span>
                 </div>
                 <div class="info">
-                    <h4 class="text-center">Other Course Offer</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
+                    <h4 class="text-center">Joomla Workshop</h4>
+                    <h2 class="text-center">Offered on-site at the event!</h2>
+                    <p>Building a dynamic site and need a robust, reliable, and fast content management system (CMS)? Look no further than Joomla. Social networks, communities, commerce, management, and tons of other practical implementations are possible with Joomla. Christopher Nielsen of CNP Integrations in Fall River, Massachusetts, will be leading this workshop.</p>
                 </div>
             </div>
         </div>
